add: pagina da loja e estilizacoes

--- a/plantas.html
+++ b/plantas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <HTML>
     <head>
+        <link rel="stylesheet" href="./css/global.css">
         <link rel="stylesheet" href="./css/plantas.css">
     </head>
     <body>
@@ -26,7 +27,7 @@
         </p>
 
         <p>Darwin explica também que estas plantas conseguem florescer em solos pobres por causa da
-          <q>"absorption of animal matter from captured insects"</q> (p.17), ou seja, elas conseguem os
+          <q>absorption of animal matter from captured insects</q> (p.17), ou seja, elas conseguem os
             nutrientes necessários a partir da matéria animal capturada.
         </p>
 
